Fixed bug (enter), fixed z-index, change default text

--- a/assets/subscribe.css
+++ b/assets/subscribe.css
@@ -6,6 +6,7 @@
     position: fixed;
     bottom: 0px;
     display: none;
+    z-index: 999;
 }
 .subscribe__header{
     font-size: 18px;
